Fixed image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9055,7 +9055,7 @@ color: #ff5722;
   .overlay img{
     position: absolute;
          margin: auto;
-         top: 0;
+         top: 30px;
          left: 0;
          right: 0;
          bottom: 0;
